[BUG] Css align

--- a/stylesheet-oil-and-gas.css
+++ b/stylesheet-oil-and-gas.css
@@ -53,11 +53,11 @@
   .one.columns                    { width: 4.66666666667%; }
   .two.columns                    { width: 13.3333333333%; }
   .three.columns                  { width: 22%;            }
-  .four.columns                   { width: 32.6666666667%; }
+  .four.columns                   { width: 33%; }
   .five.columns                   { width: 39.3333333333%; }
   .six.columns                    { width: 48%;            }
   .seven.columns                  { width: 56.6666666667%; }
-  .eight.columns                  { width: 66.3333333333%; }
+  .eight.columns                  { width: 66.5%; }
   .nine.columns                   { width: 74.0%;          }
   .ten.columns                    { width: 82.6666666667%; }
   .eleven.columns                 { width: 91.3333333333%; }
